--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -106,10 +106,10 @@ ul.social .icon {
 section {
     max-width: 480px;
     padding: 0 20px;
-    margin: 15% auto 0;
+    margin: 12% auto 0;
 }
 p {
-    margin: 4em auto 3em;
+    margin: 4% auto 4%;
     text-align: justify;
 }
 p span.origin {
