--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -78,8 +78,8 @@ body {
 }
 
 h1 {
-    font-size: 240%;
-    word-spacing: -2%;
+    font-size: 260%;
+    word-spacing: -3%;
 }
 a:link, a:visited {
     color: #4c3f37;
@@ -109,7 +109,7 @@ section {
     margin: 12% auto 0;
 }
 p {
-    margin: 4% auto 4%;
+    margin: 4em auto 3em;
     text-align: justify;
 }
 p span.origin {
