--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
+/* @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700); */
 @import url(http://fonts.googleapis.com/earlyaccess/nanummyeongjo.css);
 @font-face {
     font-family: "socialicoregular";
@@ -23,7 +23,7 @@ body {
     width: 100%;
     background-color: #f8f8f8;
     color: #4c3f37;
-    font-family: "Open Sans", sans-serif;
+    font-family: Futura, Helvetica, Arial, sans-serif;
     font-size: 100%;
     line-height: 1.5;
     font-weight: 400;
@@ -79,7 +79,7 @@ section {
 blockquote {
     margin: 4em auto 3em;
     text-align: justify;
-    font-family: "Nanum Myeongjo", serif;
+    font-family: "Nanum Myeongjo", Georgia, serif;
 }
 blockquote span.origin {
     display: block;
