--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -23,7 +23,7 @@ body {
     width: 100%;
     background-color: #f8f8f8;
     color: #4c3f37;
-    font-family: Futura, Helvetica, Arial, sans-serif;
+    font-family: Futura, "Century Gothic", Helvetica, Arial, sans-serif;
     font-size: 100%;
     line-height: 1.5;
     font-weight: 400;
